Bug 1697306 - Clamp frame buffer bounds to current widget size when locking draw target. r=lsalzman

Sometimes we end up racing on the widget size, and it can shrink between
BeginFrame and StartCompositing. We calculated our dirty region based on
the previous widget size, so we need to clamp the bounds here to ensure
we remain within the buffer.

Differential Revision: https://phabricator.services.mozilla.com/D107726